# git_analyzer

./: .env.example  .gitignore  README.md  docker-compose.yml
core/: Dockerfile  main.py  pyproject.toml
core/alembic/: env.py
core/alembic/versions/: 29c9d9590a16_add_field_leaks.py  bc8075fd2bf0_add_path_to_model.py  f3e37d5db558_add_task_table.py
core/api/: deps.py  main.py
core/api/routes/: git.py
core/core/: config.py  db.py
core/middlewares/: tokens.py
core/models/: __init__.py  base.py  task.py
core/schemas/: git.py
core/templates/: git.html  leak.html  tasks.html
core/utils/: celery_worker.py  download.py  git_dump.py  leaks.py  tasks.py  tokens.py
