[tool.poetry]
name = "git-analyzer"
version = "0.0.1"
description = ""
authors = ["kill_your_soul <platonovdi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"
pydantic-settings = "^2.2.1"
requests = "^2.31.0"
bs4 = "^0.0.2"
celery = { extras = ["redis"], version = "^5.4.0" }
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
psycopg = {extras = ["binary"], version = "^3.1.18"}
asyncpg = "^0.29.0"
pysocks = "^1.7.1"
beautifulsoup4 = "^4.12.3"
dulwich = "^0.22.1"
requests-pkcs12 = "^1.24"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "FA100",
    "RET504",
    "RET505",
    "A002",
    "ANN101",
    "SIM108",
    "S113",
    "T201",
    "S101",
]

[tool.ruff]
target-version = "py310"
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
